--- a/testStart.html
+++ b/testStart.html
@@ -34,14 +34,14 @@
 	
 	function languageSet() {
 		if(localStorage.getItem('language') == 'english'){
-			document.getElementById("top").innerHTML="Select Difficulty";
+	//		document.getElementById("top").innerHTML="Select Difficulty";
 			document.getElementById("easy").innerHTML="Easy";
 			document.getElementById("medium").innerHTML="Medium";
 			document.getElementById("hard").innerHTML="Hard";
 			document.getElementById("returnHome").innerHTML="Back";
 		}
 		else {
-			document.getElementById("top").innerHTML="Difficult&eacute";
+	//		document.getElementById("top").innerHTML="Difficult&eacute";
 			document.getElementById("easy").innerHTML="Facile";
 			document.getElementById("medium").innerHTML="Moyen";
 			document.getElementById("hard").innerHTML="Difficile";
