--- a/mainMenu.html
+++ b/mainMenu.html
@@ -66,7 +66,7 @@
 				}
 				else {
 				//	document.getElementById("music").setAttribute('data', 'music/panamaHatNV.mp3');
-				clickSound.play();
+					clickSound.play()
 				}
 			}
 
