--- a/tutorial.html
+++ b/tutorial.html
@@ -6,7 +6,7 @@
 		</head>
 	<body onload="languageSet()">
 		<div id="back">
-			<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
+			<button id="returnHome" onclick="goHome()">Back</button>
 			<div id="mainBackground">
 				<button id="monkey"></button>
 <!--			<div id = "vine1"></div>-->
@@ -40,16 +40,30 @@
 			</div>
 		</div>
 		<script>
-			function languageSet(){
-				if(localStorage.getItem('language') == 'english'){
-					document.getElementById("gameInstructions").innerHTML="A monkey swings on vines to collect bananas. Each vine has a math question. To swing to the next vine, you must correctly answer the math question in 15 seconds. If time runs out, you lose a life! The objective of the game is to answer all the questions and gain the most points as you can. There are buttons to write the answer.";
-					document.getElementById("returnHome").innerHTML="Back";
-				}
-				else {
-					document.getElementById("gameInstructions").innerHTML="Une singe qui est un roi presque d&eacutetruire l'&icircle. Banane, une singe qui aime des bananes et vie sur l'&icircle d&eacutecider qu'il veut arr&ecirct le roi. Banane oscillant sur les vignes et ramasse les bananes. Il r&eacuteponse des math&eacutematiques questions. Il y a l'eau sous les vignes alors, Banane ne veut pas tomber dans l'eau.";
-					document.getElementById("returnHome").innerHTML="Retourner";
-				}
+		
+		function goHome(){
+			buttonSound();
+			setTimeout(
+			function(){window(location.href='mainMenu.html')}
+			, 200);
+		}
+			
+		function buttonSound(){
+			if(localStorage.getItem('sound') != 'off'){
+				var clickSound = new Audio('music/click.mp3');
+				clickSound.play();
 			}
+		}
+		function languageSet(){
+			if(localStorage.getItem('language') == 'english'){
+				document.getElementById("gameInstructions").innerHTML="A monkey swings on vines to collect bananas. Each vine has a math question. To swing to the next vine, you must correctly answer the math question in 15 seconds. If time runs out, you lose a life! The objective of the game is to answer all the questions and gain the most points as you can. There are buttons to write the answer.";
+				document.getElementById("returnHome").innerHTML="Back";
+			}
+			else {
+				document.getElementById("gameInstructions").innerHTML="Un singe oscillant sur une vigne et essayer de va prend des bananes. Chaque vigne a une question de math&eacutematique. Si tu restes sur le vigne pour longtemps et si tu ne r&eacuteponse pas la question raison tu perds une vie. Si tu faire la question raison, tu continue. Tu aussi a 15 sec pour r&eacuteponse la question. Si tu prends des bananes, tu peut augmentation les pointes sur une c&ocirc;te, il y a des boutons pour &eacutecrire la r&eacuteponse.";
+				document.getElementById("returnHome").innerHTML="Retourner";
+			}
+		}
 		</script>
 	</body>
 	<!--http://www.hotscripts.com/forums/php/57676-how-redirect-another-page-once-click-html-button.html
