--- a/highScores.html
+++ b/highScores.html
@@ -93,9 +93,7 @@
 		
 		function goHome(){
 			buttonSound();
-			setTimeout(
-			function(){window(location.href='mainMenu.html')}
-			, 200);
+			setTimeout(function(){window(location.href='mainMenu.html')}, 400);
 		}
 		
 		function highScoreEasy() {
