--- a/loadingScreen.html
+++ b/loadingScreen.html
@@ -15,9 +15,7 @@
 	
 	function goStart(){
 		buttonSound();
-		setTimeout(
-		function(){window(location.href='Game.html')}
-		, 200);
+		setTimeout(function(){window(location.href='Game.html')}, 400);
 	}
 	
 	function buttonSound(){
