--- a/mainMenu.html
+++ b/mainMenu.html
@@ -35,30 +35,28 @@
 			
 			function gameStart(){
 				buttonSound();
-				setTimeout(
-				function(){window(location.href='testStart.html')}
-				, 200);
+				setTimeout(function(){window(location.href='testStart.html')}, 400);
 			}
 			
 			function goInstructions(){
 				buttonSound();
 				setTimeout(
 				function(){window(location.href='tutorial.html')}
-				, 200);
+				, 400);
 			}
 			
 			function goScores(){
 				buttonSound();
 				setTimeout(
 				function(){window(location.href='highScores.html')}
-				, 200);
+				, 400);
 			}
 			
 			function goSettings(){
 				buttonSound();
 				setTimeout(
 				function(){window(location.href='settings.html')}
-				, 200);
+				, 400);
 			}
 			
 			function buttonSound(){
