--- a/endGame.html
+++ b/endGame.html
@@ -22,9 +22,7 @@
 		
 		function goStart(){
 			buttonSound();
-			setTimeout(
-			function(){window(location.href='testStart.html')}
-			, 200);
+			setTimeout(function(){window(location.href='testStart.html')}, 400);
 		}
 			
 		function buttonSound(){
