--- a/settings.html
+++ b/settings.html
@@ -45,9 +45,7 @@
 			function goBack(){
 				buttonSound();
 			//	document.write(location.href='mainMenu.html');
-				setTimeout(
-				function(){window(location.href='mainMenu.html')}
-				, 200);
+				setTimeout(function(){window(location.href='mainMenu.html')}, 400);
 			}
 		
 			function languageChange(language1, language2) {
