--- a/tutorial.html
+++ b/tutorial.html
@@ -43,9 +43,7 @@
 		
 		function goHome(){
 			buttonSound();
-			setTimeout(
-			function(){window(location.href='mainMenu.html')}
-			, 200);
+			setTimeout(function(){window(location.href='mainMenu.html')}, 400);
 		}
 			
 		function buttonSound(){
