--- a/loadingScreen.html
+++ b/loadingScreen.html
@@ -8,7 +8,7 @@
 		<div id ="loadingImage">
 		<div id="story">	
 		</div>
-			<button id="loadButton" onclick="goStart()">Easy</button>
+			<button id="loadButton" onclick="goStart()">Start</button>
 		</div>
 	</body>
 	<script>
