--- a/Game.html
+++ b/Game.html
@@ -5,7 +5,7 @@
 		<script src="gameMechanics.js"></script>
                 <link type="text/css" rel="stylesheet" href="css/game.css"/>
 	</head>
-	<body onload="countdown(); languageSet(); init()">
+	<body onload="init(); countdown(); languageSet()">
             
             <div id="lives">
                 <img class="heart" id="life1">
