--- a/Game.html
+++ b/Game.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Game Play</title>
-		<script src="gameMechanics.js"></script>
+		<script src="javascript/gameMechanics.js"></script>
                 <link type="text/css" rel="stylesheet" href="css/game.css"/>
 	</head>
 	<body onload="init(); countdown(); languageSet()">
@@ -23,7 +23,7 @@
                 <p id="timer"></p>
             </div>
 
-            <canvas id="jungleAnimation" width="700" height="498"></canvas>
+            <canvas id="jungleAnimation" width="680" height="500"></canvas>
             
             <div id="calculator">
                 <button id="calc1" onclick="calculatorClicked(1)"></button>
