--- a/chooseDifficulty.html
+++ b/chooseDifficulty.html
@@ -17,11 +17,11 @@
 	
 	function goHome(){
 		buttonSound();
-		setTimeout(function(){window(location.href='mainMenu.html');}, 400);
+		window(location.href='mainMenu.html');
 	}
 			
 	function buttonSound(){
-		if(localStorage.getItem('sound') != 'off'){
+		if(sessionStorage.getItem('sound') !== 'off'){
 			var clickSound = new Audio('music/click.mp3');
 			clickSound.play();
 		}
@@ -31,11 +31,11 @@
 		buttonSound();
  		sessionStorage.gameDifficulty=difficultyChosen;
 
-		setTimeout(function(){window(location.href='Game.html')}, 400)	
+		window(location.href='loadingScreen.html');
  	}
 	
 	function languageSet() {
-		if(localStorage.getItem('language') == 'english'){
+		if(sessionStorage.getItem('language') === 'english'){
 			document.getElementById("easy").innerHTML="Easy";
 			document.getElementById("medium").innerHTML="Medium";
 			document.getElementById("hard").innerHTML="Hard";
