--- a/highScores.html
+++ b/highScores.html
@@ -85,7 +85,7 @@
 		var scoreId = "easy";
 		
 		function buttonSound(){
-			if(localStorage.getItem('sound') != 'off'){
+			if(sessionStorage.getItem('sound') != 'off'){
 				var clickSound = new Audio('music/click.mp3');
 				clickSound.play();
 			}
@@ -160,7 +160,7 @@
 		}
 			
 		function languageSet() {
-			if(localStorage.getItem('language') == 'english'){
+			if(sessionStorage.getItem('language') == 'english'){
 				document.getElementById("easy").innerHTML="Easy";
 				document.getElementById("medium").innerHTML="Medium";
 				document.getElementById("hard").innerHTML="Hard";
