--- a/logo.html
+++ b/logo.html
@@ -5,7 +5,6 @@
 		<title>Swinging Monkey</title>
 	</head>
 	<body>
-		<!--<button id="companyLogo" onclick = "window.location.href='Test 1 - Main Menu.html'" >-->
-		<img id ="companyLogo" onclick = "window.location.href='mainMenu.html'" src="images/logoImage.jpg"/>
+		<img id ="companyLogo" onclick = "window.location.href='mainMenu.html'" src="images/logoImage.png"/>
 	</body>
 </html>
