--- a/loadingScreen.html
+++ b/loadingScreen.html
@@ -16,7 +16,7 @@
 	
             function goStart(){
                     buttonSound();
-                    window(location.href='Game.html');
+                    window(location.href='game.html');
             }
 
             function buttonSound(){
