--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link type="text/css" rel="stylesheet" href="css/logo.css"/>
-		<title>Swinging Monkey</title>
-	</head>
-	<body>
-		<img id ="companyLogo" onclick = "window.location.href='mainMenu.html'" src="images/logoImage.png"/>
-	</body>
+    <head>
+        <link type="text/css" rel="stylesheet" href="css/logo.css"/>
+        <title>Swinging Monkey</title>
+    </head>
+    <body>
+        <img id ="companyLogo" onclick = "window.location.href='mainMenu.html'" src="images/logoImage.png" alt="">
+    </body>
 </html>
