--- a/chooseDifficulty.html
+++ b/chooseDifficulty.html
@@ -1,54 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link type="text/css" rel="stylesheet" href="css/chooseDifficulty.css"/>
-		<title>TestStart</title>
-	</head>
-	<body onload="languageSet()">
-		<div id="back">
-			<button id="easy" onclick="difficulty('easy')">Easy</button>
-			<button id="medium" onclick="difficulty('medium')">Medium</button>
-			<button id="hard" onclick="difficulty('hard')">Hard</button>
-			<button id="returnHome" onclick="goHome()">Back</button>
-		</div>
- 	<body>	
- 	
- 	<script>
-	
-	function goHome(){
-		buttonSound();
-		window(location.href='mainMenu.html');
-	}
-			
-	function buttonSound(){
-		if(sessionStorage.getItem('sound') !== 'off'){
-			var clickSound = new Audio('music/click.mp3');
-			clickSound.play();
-		}
-	}
-	
-	function difficulty(difficultyChosen){
-		buttonSound();
- 		sessionStorage.gameDifficulty=difficultyChosen;
-
-		window(location.href='loadingScreen.html');
- 	}
-	
-	function languageSet() {
-		if(sessionStorage.getItem('language') === 'english'){
-			document.getElementById("easy").innerHTML="Easy";
-			document.getElementById("medium").innerHTML="Medium";
-			document.getElementById("hard").innerHTML="Hard";
-			document.getElementById("returnHome").innerHTML="Back";
-		}
-		else {
-			document.getElementById("easy").innerHTML="Facile";
-			document.getElementById("medium").innerHTML="Moyen";
-			document.getElementById("hard").innerHTML="Difficile";
-			document.getElementById("returnHome").innerHTML="Retourner";
-		}
-	}
- 	</script>
-
-	
+    <head>
+        <script src="javascript/chooseDifficulty.js"></script>
+        <link type="text/css" rel="stylesheet" href="css/chooseDifficulty.css"/>
+        <title>Choose Difficulty</title>
+    </head>
+    <body onload="languageSet()">
+        <div id="back">
+            <button id="easy" onclick="difficulty('easy')">Easy</button>
+            <button id="medium" onclick="difficulty('medium')">Medium</button>
+            <button id="hard" onclick="difficulty('hard')">Hard</button>
+            <button id="returnHome" onclick="goHome()">Back</button>
+        </div>
+    </body>	
 </html>
